--- a/package.json
+++ b/package.json
@@ -31,5 +31,5 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   },
-  "proxy": "http://localhost:3000"
+  "proxy" : "http://localhost:3000/"
 }
