--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "semantic-ui": "^2.4.2"
+    "semantic-ui": "^2.4.2",
+    "semantic-ui-react": "^0.86.0"
   }
 }
