--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "react": "^16.8.6",
+    "react-moment": "^0.9.2",
     "semantic-ui": "^2.4.2",
     "semantic-ui-react": "^0.86.0"
   }
