--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "passport-local": "^1.0.0",
     "react": "^16.8.6",
     "react-moment": "^0.9.2",
+    "react-timestamp": "^5.0.0",
     "semantic-ui": "^2.4.2",
     "semantic-ui-react": "^0.86.0"
   }
