--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-dropzone": "^10.1.4",
+    "react-image-crop": "^7.0.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
     "semantic-ui": "^2.4.2"
