--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "react": "^16.8.6",
+    "react-dropzone": "^10.1.4",
+    "react-image-crop": "^7.0.2",
     "react-moment": "^0.9.2",
     "react-timestamp": "^5.0.0",
     "semantic-ui": "^2.4.2",
